# SecureVaultUltimate

./: .gitignore  README.md  deny.toml  index.html  package-lock.json  package.json  secure-vault-feed.json  secure-vault-feed.json.sha256
.github/workflows/: security-check.yml  threat-sync.yml  updater-manifest.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: custom-mui2-dark.nsh
src-tauri/src/: error.rs  lib.rs  main.rs  security.rs  shield.rs  threat.rs  updates.rs  vault.rs
src-tauri/src/core/: config.rs  firewall.rs  mod.rs  secure_fs.rs
src-tauri/src/vanguard/: mod.rs  recovery.rs
tools/feed-signer/: Cargo.toml  README.md  secure-vault-feed.json
tools/feed-signer/spec/: SPEC.md  threat_payload.sample.json
tools/feed-signer/src/: main.rs
tools/release/: Get-NormalizedExeHash.ps1
tools/threat-sync/: README.md  collect_threat_feed.py
tools/updater-manifest/: build_updater_manifest.py
